--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ body {
   background: var(--Grey-700);
   padding: 1rem .475rem;
   border-radius: .475rem;
+  transition: background .3s;
 }
 
 .links li a:hover {
