--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body {
 
 .hero p {
   font-size: .875rem;
-  color: var(--White);
+  color: #bbb;
   font-family: var(--inter);
   font-weight: 400;
   margin-bottom: 1rem;
